--- a/tests/test_cases/2014/commands/7B0.7B8.2106.yaml
+++ b/tests/test_cases/2014/commands/7B0.7B8.2106.yaml
@@ -29,6 +29,12 @@ test_cases:
     TOYOTA_YAW_2: -2
     TOYOTA_YAW_RATE: 0
     TOYOTA_YAW_RATE2: -2
+  response: 7B8056106807E4D
+- expected_values:
+    TOYOTA_YAW_1: 0
+    TOYOTA_YAW_2: -2
+    TOYOTA_YAW_RATE: 0
+    TOYOTA_YAW_RATE2: -2
   response: 7B8056106807E5C
 - expected_values:
     TOYOTA_YAW_1: 0
