--- a/tests/test_cases/2014/commands/7C4.7CC.214B.yaml
+++ b/tests/test_cases/2014/commands/7C4.7CC.214B.yaml
@@ -16,5 +16,8 @@ test_cases:
     TOYOTA_EVAP_FIN_THERMISTOR: 19.65
   response: 7CC03614B8D
 - expected_values:
+    TOYOTA_EVAP_FIN_THERMISTOR: 30.5
+  response: 7CC03614BAC
+- expected_values:
     TOYOTA_EVAP_FIN_THERMISTOR: 31.55
   response: 7CC03614BAF
