--- a/tests/test_cases/2014/commands/7E0.7E8.2101.yaml
+++ b/tests/test_cases/2014/commands/7E0.7E8.2101.yaml
@@ -53,6 +53,32 @@ test_cases:
     7E823310501AF01EC33
     7E824E1000000000000
 - expected_values:
+    TOYOTA_AAT: 81
+    TOYOTA_ACCEL_SENS_NO_1_VOLT: 17.64706
+    TOYOTA_ACCEL_SENS_NO_2_VOLT: 1.96078
+    TOYOTA_ATMOSPHERE_PRESSURE: 10
+    TOYOTA_CALCULATED_LOAD_7E0: 27.05882
+    TOYOTA_COOLANT_TEMP: 159
+    TOYOTA_ENGINE_RUN_TIME: 45
+    TOYOTA_ENGINE_SPEED: 0
+    TOYOTA_INTAKE_AIR: 57
+    TOYOTA_MAF: 550
+    TOYOTA_MAP: 70
+    TOYOTA_THROTTLE_MOTOR_DUTY: 0.39216
+    TOYOTA_THROTTLE_SENSOR_POSITION: 49.80392
+    TOYOTA_THROTTLE_SENSOR_VOLT: 16.07843
+    TOYOTA_THROTTL_SENSOR_2_VOLT: 31.76471
+    TOYOTA_TIME_AFTER_DTC_CLEARED: 13515
+    TOYOTA_VEHICLE_LOAD: 0.05493
+    TOYOTA_VEHICLE_SPEED: 89
+    TOYOTA_WARMUP_CYCLE_CLEARED_DTC: 1
+  response: |-
+    7E8101C610145002402
+    7E821264661790AC700
+    7E8220059002D7F2951
+    7E8232D0501AF01F834
+    7E824CB000000000000
+- expected_values:
     TOYOTA_AAT: 87
     TOYOTA_ACCEL_SENS_NO_1_VOLT: 20.39216
     TOYOTA_ACCEL_SENS_NO_2_VOLT: 1.96078
