--- a/tests/test_cases/2014/commands/7E0.7E8.2104.yaml
+++ b/tests/test_cases/2014/commands/7E0.7E8.2104.yaml
@@ -35,6 +35,17 @@ test_cases:
     7E8237DFFA7FF000000
 - expected_values:
     TOYOTA_AFS_CURRENT_B1S1: 127.99
+    TOYOTA_AFS_VOLTAGE_B1S1: 3.27635
+    TOYOTA_AF_LAMBDA_B1S1: 0.98794
+    TOYOTA_O2S_B1S2: 0.635
+    TOYOTA_TARGET_AIR_FUEL_RATIO: 0.98821
+  response: |-
+    7E8101861047F207F17
+    7E82168F97EB568817F
+    7E822177FFF7EB57FFD
+    7E82300FF00FF000000
+- expected_values:
+    TOYOTA_AFS_CURRENT_B1S1: 127.99
     TOYOTA_AFS_VOLTAGE_B1S1: 3.30561
     TOYOTA_AF_LAMBDA_B1S1: 0.98827
     TOYOTA_O2S_B1S2: 0.635
