--- a/tests/test_cases/2014/commands/7E0.7E8.2105.yaml
+++ b/tests/test_cases/2014/commands/7E0.7E8.2105.yaml
@@ -37,6 +37,12 @@ test_cases:
     7E8100C61054C6915CC
     7E82115CC1094109400
 - expected_values:
+    TOYOTA_CATALYST_T_B1S1: 142.2
+    TOYOTA_CATALYST_T_B1S2: 142.2
+  response: |-
+    7E8100C61054C84071E
+    7E821071E04A304A300
+- expected_values:
     TOYOTA_CATALYST_T_B1S1: 224.5
     TOYOTA_CATALYST_T_B1S2: 224.5
   response: |-
