--- a/tests/test_cases/2014/commands/7E0.7E8.2151.yaml
+++ b/tests/test_cases/2014/commands/7E0.7E8.2151.yaml
@@ -529,6 +529,39 @@ test_cases:
     7E82480008000800080
     7E82500000000000000
 - expected_values:
+    TOYOTA_AC_AMB_T: 12
+    TOYOTA_AC_FB: 0
+    TOYOTA_ELEC_LOAD_FB: 0
+    TOYOTA_ENG_SPD_START_OFF: 1112.5
+    TOYOTA_ENG_START_HESIT: 0
+    TOYOTA_ENG_START_T: 0
+    TOYOTA_EOT: 74
+    TOYOTA_EOT_V3: 74
+    TOYOTA_IMMOB_FUEL_CUT: 0
+    TOYOTA_ISC_FB: 0.24292
+    TOYOTA_ISC_FLOW: 8.44727
+    TOYOTA_ISC_LEARN: 6.09253
+    TOYOTA_ISC_POS: 4.92859
+    TOYOTA_LOW_RPM_CTRL: 0
+    TOYOTA_LOW_RPM_START: 0
+    TOYOTA_NEUTRAL_CTRL: 0
+    TOYOTA_N_RANGE_STS: 1
+    TOYOTA_PREV_TRIP_AMB_T: 13
+    TOYOTA_PREV_TRIP_DST: 0
+    TOYOTA_PREV_TRIP_EOT: 74
+    TOYOTA_PREV_TRIP_IAT: 31
+    TOYOTA_STARTER_CNT: 1
+    TOYOTA_TPS: 0
+    TOYOTA_VVTOT: 81
+    TOYOTA_VVT_ADV_FAIL: 0
+  response: |-
+    7E81023615100000590
+    7E82101000079477272
+    7E822343500001B0802
+    7E82386001980C7937F
+    7E82480008000800080
+    7E82500000000000000
+- expected_values:
     TOYOTA_AC_AMB_T: 16
     TOYOTA_AC_FB: 0
     TOYOTA_ELEC_LOAD_FB: 0.1062
