--- a/tests/test_cases/2014/commands/7E0.7E8.2103.yaml
+++ b/tests/test_cases/2014/commands/7E0.7E8.2103.yaml
@@ -55,6 +55,15 @@ test_cases:
     7E821807B9800743D03
     7E82282020200000000
 - expected_values:
+    TOYOTA_EVAP_PURGE_DUTY: 47.84314
+    TOYOTA_IGN_ADVANCE: 131
+    TOYOTA_LONG_FT_B1S1: -3.125
+    TOYOTA_SHORT_FT_B1S1: 2.34375
+  response: |-
+    7E8101061030202837C
+    7E821837A9800003D03
+    7E82283020000000000
+- expected_values:
     TOYOTA_EVAP_PURGE_DUTY: 48.23529
     TOYOTA_IGN_ADVANCE: 130
     TOYOTA_LONG_FT_B1S1: -2.34375
