--- a/tests/test_cases/2014/commands/7C4.7CC.214B.yaml
+++ b/tests/test_cases/2014/commands/7C4.7CC.214B.yaml
@@ -1,6 +1,12 @@
 command_id: 7C4.7CC.214B
 test_cases:
 - expected_values:
+    TOYOTA_EVAP_FIN_THERMISTOR: 14.4
+  response: 7CC03614B7E
+- expected_values:
+    TOYOTA_EVAP_FIN_THERMISTOR: 14.75
+  response: 7CC03614B7F
+- expected_values:
     TOYOTA_EVAP_FIN_THERMISTOR: 18.25
   response: 7CC03614B89
 - expected_values:
