--- a/tests/test_cases/2014/commands/7E0.7E8.2101.yaml
+++ b/tests/test_cases/2014/commands/7E0.7E8.2101.yaml
@@ -79,6 +79,32 @@ test_cases:
     7E8232D0501AF01F834
     7E824CB000000000000
 - expected_values:
+    TOYOTA_AAT: 39
+    TOYOTA_ACCEL_SENS_NO_1_VOLT: 19.21569
+    TOYOTA_ACCEL_SENS_NO_2_VOLT: 1.96078
+    TOYOTA_ATMOSPHERE_PRESSURE: 17
+    TOYOTA_CALCULATED_LOAD_7E0: 29.01961
+    TOYOTA_COOLANT_TEMP: 39
+    TOYOTA_ENGINE_RUN_TIME: 49
+    TOYOTA_ENGINE_SPEED: 0
+    TOYOTA_INTAKE_AIR: 57
+    TOYOTA_MAF: 655.35
+    TOYOTA_MAP: 53
+    TOYOTA_THROTTLE_MOTOR_DUTY: 0.39216
+    TOYOTA_THROTTLE_SENSOR_POSITION: 51.76471
+    TOYOTA_THROTTLE_SENSOR_VOLT: 16.07843
+    TOYOTA_THROTTL_SENSOR_2_VOLT: 31.76471
+    TOYOTA_TIME_AFTER_DTC_CLEARED: 13886
+    TOYOTA_VEHICLE_LOAD: 0.06409
+    TOYOTA_VEHICLE_SPEED: 85
+    TOYOTA_WARMUP_CYCLE_CLEARED_DTC: 1
+  response: |-
+    7E8101C61014A002A04
+    7E8211635614F114F00
+    7E82200550031842951
+    7E823310501AF01F936
+    7E8243E000000000000
+- expected_values:
     TOYOTA_AAT: 87
     TOYOTA_ACCEL_SENS_NO_1_VOLT: 20.39216
     TOYOTA_ACCEL_SENS_NO_2_VOLT: 1.96078
@@ -131,31 +157,109 @@ test_cases:
     7E8232D0501AF01ED33
     7E824CD000000000000
 - expected_values:
-    TOYOTA_AAT: 87
-    TOYOTA_ACCEL_SENS_NO_1_VOLT: 17.64706
+    TOYOTA_AAT: 57
+    TOYOTA_ACCEL_SENS_NO_1_VOLT: 18.43137
     TOYOTA_ACCEL_SENS_NO_2_VOLT: 1.96078
-    TOYOTA_ATMOSPHERE_PRESSURE: 10
-    TOYOTA_CALCULATED_LOAD_7E0: 30.58824
-    TOYOTA_COOLANT_TEMP: 3
-    TOYOTA_ENGINE_RUN_TIME: 45
-    TOYOTA_ENGINE_SPEED: 44
+    TOYOTA_ATMOSPHERE_PRESSURE: 11
+    TOYOTA_CALCULATED_LOAD_7E0: 36.47059
+    TOYOTA_COOLANT_TEMP: 15
+    TOYOTA_ENGINE_RUN_TIME: 47
+    TOYOTA_ENGINE_SPEED: 1280
     TOYOTA_INTAKE_AIR: 57
-    TOYOTA_MAF: 596
-    TOYOTA_MAP: 83
+    TOYOTA_MAF: 655.35
+    TOYOTA_MAP: 55
     TOYOTA_THROTTLE_MOTOR_DUTY: 0.39216
-    TOYOTA_THROTTLE_SENSOR_POSITION: 49.80392
+    TOYOTA_THROTTLE_SENSOR_POSITION: 50.98039
     TOYOTA_THROTTLE_SENSOR_VOLT: 16.07843
     TOYOTA_THROTTL_SENSOR_2_VOLT: 31.76471
-    TOYOTA_TIME_AFTER_DTC_CLEARED: 13261
-    TOYOTA_VEHICLE_LOAD: 0.06256
-    TOYOTA_VEHICLE_SPEED: 206
+    TOYOTA_TIME_AFTER_DTC_CLEARED: 13691
+    TOYOTA_VEHICLE_LOAD: 0.07935
+    TOYOTA_VEHICLE_SPEED: 236
     TOYOTA_WARMUP_CYCLE_CLEARED_DTC: 1
   response: |-
-    7E8101C61014E002902
-    7E8215453617F0A2B00
-    7E8222CCE002D7F2951
-    7E8232D0501AF01ED33
-    7E824CD000000000000
+    7E8101C61015D003403
+    7E821403761610B3705
+    7E82200EC002F822951
+    7E8232F0501AF01FB35
+    7E8247B000000000000
+- expected_values:
+    TOYOTA_AAT: 51
+    TOYOTA_ACCEL_SENS_NO_1_VOLT: 18.82353
+    TOYOTA_ACCEL_SENS_NO_2_VOLT: 1.96078
+    TOYOTA_ATMOSPHERE_PRESSURE: 12
+    TOYOTA_CALCULATED_LOAD_7E0: 36.86275
+    TOYOTA_COOLANT_TEMP: -37
+    TOYOTA_ENGINE_RUN_TIME: 48
+    TOYOTA_ENGINE_SPEED: 0
+    TOYOTA_INTAKE_AIR: 57
+    TOYOTA_MAF: 655.35
+    TOYOTA_MAP: 55
+    TOYOTA_THROTTLE_MOTOR_DUTY: 0.39216
+    TOYOTA_THROTTLE_SENSOR_POSITION: 51.37255
+    TOYOTA_THROTTLE_SENSOR_VOLT: 16.07843
+    TOYOTA_THROTTL_SENSOR_2_VOLT: 31.76471
+    TOYOTA_TIME_AFTER_DTC_CLEARED: 13769
+    TOYOTA_VEHICLE_LOAD: 0.08545
+    TOYOTA_VEHICLE_SPEED: 177
+    TOYOTA_WARMUP_CYCLE_CLEARED_DTC: 1
+  response: |-
+    7E8101C61015E003803
+    7E821BF37615B0C0300
+    7E82200B10030832951
+    7E823300501AF01FA35
+    7E824C9000000000000
+- expected_values:
+    TOYOTA_AAT: 60
+    TOYOTA_ACCEL_SENS_NO_1_VOLT: 18.82353
+    TOYOTA_ACCEL_SENS_NO_2_VOLT: 1.96078
+    TOYOTA_ATMOSPHERE_PRESSURE: 11
+    TOYOTA_CALCULATED_LOAD_7E0: 38.03922
+    TOYOTA_COOLANT_TEMP: 28
+    TOYOTA_ENGINE_RUN_TIME: 47
+    TOYOTA_ENGINE_SPEED: 1
+    TOYOTA_INTAKE_AIR: 57
+    TOYOTA_MAF: 655.35
+    TOYOTA_MAP: 55
+    TOYOTA_THROTTLE_MOTOR_DUTY: 0.39216
+    TOYOTA_THROTTLE_SENSOR_POSITION: 50.98039
+    TOYOTA_THROTTLE_SENSOR_VOLT: 16.07843
+    TOYOTA_THROTTL_SENSOR_2_VOLT: 31.76471
+    TOYOTA_TIME_AFTER_DTC_CLEARED: 13691
+    TOYOTA_VEHICLE_LOAD: 0.08392
+    TOYOTA_VEHICLE_SPEED: 9
+    TOYOTA_WARMUP_CYCLE_CLEARED_DTC: 1
+  response: |-
+    7E8101C610161003703
+    7E8216C3761640B4400
+    7E8220109002F822951
+    7E823300501AF01FC35
+    7E8247B000000000000
+- expected_values:
+    TOYOTA_AAT: 65
+    TOYOTA_ACCEL_SENS_NO_1_VOLT: 19.21569
+    TOYOTA_ACCEL_SENS_NO_2_VOLT: 1.96078
+    TOYOTA_ATMOSPHERE_PRESSURE: 11
+    TOYOTA_CALCULATED_LOAD_7E0: 38.43137
+    TOYOTA_COOLANT_TEMP: 3
+    TOYOTA_ENGINE_RUN_TIME: 48
+    TOYOTA_ENGINE_SPEED: 1
+    TOYOTA_INTAKE_AIR: 57
+    TOYOTA_MAF: 655.35
+    TOYOTA_MAP: 56
+    TOYOTA_THROTTLE_MOTOR_DUTY: 0.39216
+    TOYOTA_THROTTLE_SENSOR_POSITION: 51.76471
+    TOYOTA_THROTTLE_SENSOR_VOLT: 16.07843
+    TOYOTA_THROTTL_SENSOR_2_VOLT: 31.76471
+    TOYOTA_TIME_AFTER_DTC_CLEARED: 13632
+    TOYOTA_VEHICLE_LOAD: 0.09461
+    TOYOTA_VEHICLE_SPEED: 69
+    TOYOTA_WARMUP_CYCLE_CLEARED_DTC: 1
+  response: |-
+    7E8101C610162003E03
+    7E821D63861690B2B00
+    7E82201450030842951
+    7E823310501AF01FD35
+    7E82440000000000000
 - expected_values:
     TOYOTA_AAT: 80
     TOYOTA_ACCEL_SENS_NO_1_VOLT: 18.82353
@@ -182,3 +286,29 @@ test_cases:
     7E82200970031842951
     7E823300501AF01F734
     7E824A4000000000000
+- expected_values:
+    TOYOTA_AAT: 46
+    TOYOTA_ACCEL_SENS_NO_1_VOLT: 19.60784
+    TOYOTA_ACCEL_SENS_NO_2_VOLT: 1.96078
+    TOYOTA_ATMOSPHERE_PRESSURE: 13
+    TOYOTA_CALCULATED_LOAD_7E0: 41.96078
+    TOYOTA_COOLANT_TEMP: 47
+    TOYOTA_ENGINE_RUN_TIME: 305
+    TOYOTA_ENGINE_SPEED: 0
+    TOYOTA_INTAKE_AIR: 57
+    TOYOTA_MAF: 655.35
+    TOYOTA_MAP: 54
+    TOYOTA_THROTTLE_MOTOR_DUTY: 0.39216
+    TOYOTA_THROTTLE_SENSOR_POSITION: 52.15686
+    TOYOTA_THROTTLE_SENSOR_VOLT: 16.07843
+    TOYOTA_THROTTL_SENSOR_2_VOLT: 31.76471
+    TOYOTA_TIME_AFTER_DTC_CLEARED: 13789
+    TOYOTA_VEHICLE_LOAD: 0.09003
+    TOYOTA_VEHICLE_SPEED: 141
+    TOYOTA_WARMUP_CYCLE_CLEARED_DTC: 1
+  response: |-
+    7E8101C61016B003B04
+    7E821693661560D5700
+    7E822008D0131852951
+    7E823320501AF01FA35
+    7E824DD000000000000
