--- a/tests/test_cases/2014/commands/7C0.7C8.2113.yaml
+++ b/tests/test_cases/2014/commands/7C0.7C8.2113.yaml
@@ -18,3 +18,9 @@ test_cases:
 - expected_values:
     TOYOTA_BAT_V: 13.5
   response: 7C803611387
+- expected_values:
+    TOYOTA_BAT_V: 13.7
+  response: 7C803611389
+- expected_values:
+    TOYOTA_BAT_V: 13.8
+  response: 7C80361138A
