--- a/tests/test_cases/2014/commands/7E0.7E8.2125.yaml
+++ b/tests/test_cases/2014/commands/7E0.7E8.2125.yaml
@@ -27,6 +27,28 @@ test_cases:
     TOYOTA_CRUISE_CONTROL_LIVE_BRAKE_CANCEL_SWITCH: 0
     TOYOTA_ELECTRICAL_LOAD_SIGNAL_1: 1
     TOYOTA_ELECTRICAL_LOAD_SIGNAL_2: 0
+    TOYOTA_NEUTRAL_POSITION_SW_SIGNAL: 0
+    TOYOTA_PATTERN_SWITCH_PWR_M: 0
+    TOYOTA_POWER_STEERING_SIGNAL: 0
+    TOYOTA_SHIFT_SW_STATUS_D_RANGE: 0
+    TOYOTA_SHIFT_SW_STATUS_N_RANGE: 0
+    TOYOTA_SHIFT_SW_STATUS_P_RANGE: 0
+    TOYOTA_SHIFT_SW_STATUS_R_RANGE: 1
+    TOYOTA_SPORTS_MODE_SELECTION_SW: 0
+    TOYOTA_SPORTS_SHIFT_DOWN_SW: 0
+    TOYOTA_SPORTS_SHIFT_UP_SW: 0
+    TOYOTA_STARTER_CONTROL: 0
+    TOYOTA_STARTER_SIGNAL: 0
+    TOYOTA_STOP_LIGHT_SWITCH: 0
+    TOYOTA_TC_TERMINAL: 0
+  response: |-
+    7E8100B612500008040
+    7E82100000000000000
+- expected_values:
+    TOYOTA_A_C_COMPRESSOR: 0
+    TOYOTA_CRUISE_CONTROL_LIVE_BRAKE_CANCEL_SWITCH: 0
+    TOYOTA_ELECTRICAL_LOAD_SIGNAL_1: 1
+    TOYOTA_ELECTRICAL_LOAD_SIGNAL_2: 0
     TOYOTA_NEUTRAL_POSITION_SW_SIGNAL: 1
     TOYOTA_PATTERN_SWITCH_PWR_M: 0
     TOYOTA_POWER_STEERING_SIGNAL: 0
@@ -90,6 +112,28 @@ test_cases:
     7E82100000000000000
 - expected_values:
     TOYOTA_A_C_COMPRESSOR: 0
+    TOYOTA_CRUISE_CONTROL_LIVE_BRAKE_CANCEL_SWITCH: 1
+    TOYOTA_ELECTRICAL_LOAD_SIGNAL_1: 1
+    TOYOTA_ELECTRICAL_LOAD_SIGNAL_2: 0
+    TOYOTA_NEUTRAL_POSITION_SW_SIGNAL: 0
+    TOYOTA_PATTERN_SWITCH_PWR_M: 0
+    TOYOTA_POWER_STEERING_SIGNAL: 0
+    TOYOTA_SHIFT_SW_STATUS_D_RANGE: 1
+    TOYOTA_SHIFT_SW_STATUS_N_RANGE: 0
+    TOYOTA_SHIFT_SW_STATUS_P_RANGE: 0
+    TOYOTA_SHIFT_SW_STATUS_R_RANGE: 0
+    TOYOTA_SPORTS_MODE_SELECTION_SW: 0
+    TOYOTA_SPORTS_SHIFT_DOWN_SW: 0
+    TOYOTA_SPORTS_SHIFT_UP_SW: 0
+    TOYOTA_STARTER_CONTROL: 0
+    TOYOTA_STARTER_SIGNAL: 0
+    TOYOTA_STOP_LIGHT_SWITCH: 1
+    TOYOTA_TC_TERMINAL: 0
+  response: |-
+    7E8100B612506008010
+    7E82100000000000000
+- expected_values:
+    TOYOTA_A_C_COMPRESSOR: 0
     TOYOTA_CRUISE_CONTROL_LIVE_BRAKE_CANCEL_SWITCH: 0
     TOYOTA_ELECTRICAL_LOAD_SIGNAL_1: 0
     TOYOTA_ELECTRICAL_LOAD_SIGNAL_2: 0
@@ -112,6 +156,28 @@ test_cases:
     7E82100000000000000
 - expected_values:
     TOYOTA_A_C_COMPRESSOR: 0
+    TOYOTA_CRUISE_CONTROL_LIVE_BRAKE_CANCEL_SWITCH: 0
+    TOYOTA_ELECTRICAL_LOAD_SIGNAL_1: 1
+    TOYOTA_ELECTRICAL_LOAD_SIGNAL_2: 0
+    TOYOTA_NEUTRAL_POSITION_SW_SIGNAL: 0
+    TOYOTA_PATTERN_SWITCH_PWR_M: 0
+    TOYOTA_POWER_STEERING_SIGNAL: 1
+    TOYOTA_SHIFT_SW_STATUS_D_RANGE: 0
+    TOYOTA_SHIFT_SW_STATUS_N_RANGE: 0
+    TOYOTA_SHIFT_SW_STATUS_P_RANGE: 0
+    TOYOTA_SHIFT_SW_STATUS_R_RANGE: 1
+    TOYOTA_SPORTS_MODE_SELECTION_SW: 0
+    TOYOTA_SPORTS_SHIFT_DOWN_SW: 0
+    TOYOTA_SPORTS_SHIFT_UP_SW: 0
+    TOYOTA_STARTER_CONTROL: 0
+    TOYOTA_STARTER_SIGNAL: 0
+    TOYOTA_STOP_LIGHT_SWITCH: 0
+    TOYOTA_TC_TERMINAL: 0
+  response: |-
+    7E8100B612508008040
+    7E82100000000000000
+- expected_values:
+    TOYOTA_A_C_COMPRESSOR: 0
     TOYOTA_CRUISE_CONTROL_LIVE_BRAKE_CANCEL_SWITCH: 1
     TOYOTA_ELECTRICAL_LOAD_SIGNAL_1: 1
     TOYOTA_ELECTRICAL_LOAD_SIGNAL_2: 0
@@ -131,4 +197,26 @@ test_cases:
     TOYOTA_TC_TERMINAL: 0
   response: |-
     7E8100B61250E008010
+    7E82100000000000000
+- expected_values:
+    TOYOTA_A_C_COMPRESSOR: 0
+    TOYOTA_CRUISE_CONTROL_LIVE_BRAKE_CANCEL_SWITCH: 1
+    TOYOTA_ELECTRICAL_LOAD_SIGNAL_1: 1
+    TOYOTA_ELECTRICAL_LOAD_SIGNAL_2: 0
+    TOYOTA_NEUTRAL_POSITION_SW_SIGNAL: 0
+    TOYOTA_PATTERN_SWITCH_PWR_M: 0
+    TOYOTA_POWER_STEERING_SIGNAL: 1
+    TOYOTA_SHIFT_SW_STATUS_D_RANGE: 0
+    TOYOTA_SHIFT_SW_STATUS_N_RANGE: 0
+    TOYOTA_SHIFT_SW_STATUS_P_RANGE: 0
+    TOYOTA_SHIFT_SW_STATUS_R_RANGE: 1
+    TOYOTA_SPORTS_MODE_SELECTION_SW: 0
+    TOYOTA_SPORTS_SHIFT_DOWN_SW: 0
+    TOYOTA_SPORTS_SHIFT_UP_SW: 0
+    TOYOTA_STARTER_CONTROL: 0
+    TOYOTA_STARTER_SIGNAL: 0
+    TOYOTA_STOP_LIGHT_SWITCH: 1
+    TOYOTA_TC_TERMINAL: 0
+  response: |-
+    7E8100B61250E008040
     7E82100000000000000
