Update command data for Toyota/Tundra

--- a/tests/test_cases/2014/commands/7B0.7B8.2105.yaml
+++ b/tests/test_cases/2014/commands/7B0.7B8.2105.yaml
@@ -19,6 +19,12 @@ test_cases:
     7B810086105778603A4
     7B821073F0000000000
 - expected_values:
+    TOYOTA_DECEL: -0.64165
+    TOYOTA_DECEL_2: 1.212
+  response: |-
+    7B8100861057B8802FD
+    7B82101330000000000
+- expected_values:
     TOYOTA_DECEL: -0.49906
     TOYOTA_DECEL_2: 0.21388
   response: |-
@@ -37,11 +43,11 @@ test_cases:
     7B8100861057E810449
     7B82100A10000000000
 - expected_values:
-    TOYOTA_DECEL: 0.07129
-    TOYOTA_DECEL_2: 0.07129
+    TOYOTA_DECEL: 0.49906
+    TOYOTA_DECEL_2: -0.64165
   response: |-
-    7B810086105808002E3
-    7B82104220000000000
+    7B810086105837B03AA
+    7B821095A0000000000
 - expected_values:
     TOYOTA_DECEL: 1.212
     TOYOTA_DECEL_2: -0.35647
