--- a/tests/test_cases/2014/commands/7B0.7B8.2142.yaml
+++ b/tests/test_cases/2014/commands/7B0.7B8.2142.yaml
@@ -27,6 +27,24 @@ test_cases:
 - expected_values:
     TOYOTA_FL_WHEEL_ACCELERATION: 0
     TOYOTA_FR_WHEEL_ACCELERATION: 0
+    TOYOTA_RL_WHEEL_ACCELERATION: 255
+    TOYOTA_RR_WHEEL_ACCELERATION: 0
+  response: 7B8066142000000FF
+- expected_values:
+    TOYOTA_FL_WHEEL_ACCELERATION: 0
+    TOYOTA_FR_WHEEL_ACCELERATION: 0
     TOYOTA_RL_WHEEL_ACCELERATION: 2
     TOYOTA_RR_WHEEL_ACCELERATION: 1
   response: 7B806614200000102
+- expected_values:
+    TOYOTA_FL_WHEEL_ACCELERATION: 2
+    TOYOTA_FR_WHEEL_ACCELERATION: 1
+    TOYOTA_RL_WHEEL_ACCELERATION: 0
+    TOYOTA_RR_WHEEL_ACCELERATION: 0
+  response: 7B806614201020000
+- expected_values:
+    TOYOTA_FL_WHEEL_ACCELERATION: 0
+    TOYOTA_FR_WHEEL_ACCELERATION: 255
+    TOYOTA_RL_WHEEL_ACCELERATION: 255
+    TOYOTA_RR_WHEEL_ACCELERATION: 254
+  response: 7B8066142FF00FEFF
