--- a/tests/test_cases/2014/commands/7C0.7C8.2113.yaml
+++ b/tests/test_cases/2014/commands/7C0.7C8.2113.yaml
@@ -24,3 +24,9 @@ test_cases:
 - expected_values:
     TOYOTA_BAT_V: 13.8
   response: 7C80361138A
+- expected_values:
+    TOYOTA_BAT_V: 13.9
+  response: 7C80361138B
+- expected_values:
+    TOYOTA_BAT_V: 14
+  response: 7C80361138C
