--- a/tests/test_cases/2014/commands/7C0.7C8.2121.yaml
+++ b/tests/test_cases/2014/commands/7C0.7C8.2121.yaml
@@ -16,6 +16,9 @@ test_cases:
     TOYOTA_VSS_V2: 4
   response: 7C803612104
 - expected_values:
+    TOYOTA_VSS_V2: 7
+  response: 7C803612107
+- expected_values:
     TOYOTA_VSS_V2: 15
   response: 7C80361210F
 - expected_values:
@@ -24,3 +27,6 @@ test_cases:
 - expected_values:
     TOYOTA_VSS_V2: 21
   response: 7C803612115
+- expected_values:
+    TOYOTA_VSS_V2: 46
+  response: 7C80361212E
