--- a/tests/test_cases/2014/commands/7C0.7C8.2168.yaml
+++ b/tests/test_cases/2014/commands/7C0.7C8.2168.yaml
@@ -1,5 +1,8 @@
 command_id: 7C0.7C8.2168
 test_cases:
 - expected_values:
+    TOYOTA_RHEOSTAT: 254
+  response: 7C8036168FE
+- expected_values:
     TOYOTA_RHEOSTAT: 255
   response: 7C8036168FF
