--- a/tests/test_cases/2014/commands/7C4.2143.yaml
+++ b/tests/test_cases/2014/commands/7C4.2143.yaml
@@ -6,3 +6,6 @@ test_cases:
 - expected_values:
     TOYOTA_AIR_OUTLET_SERVO_PULSE_D: 25
   response: 7CC03614319
+- expected_values:
+    TOYOTA_AIR_OUTLET_SERVO_PULSE_D: 32
+  response: 7CC03614320
