--- a/tests/test_cases/2014/commands/7C4.7CC.213D.yaml
+++ b/tests/test_cases/2014/commands/7C4.7CC.213D.yaml
@@ -1,6 +1,9 @@
 command_id: 7C4.7CC.213D
 test_cases:
 - expected_values:
+    TOYOTA_ADJUSTED_AMBIENT_T: -3.28
+  response: 7CC03613D56
+- expected_values:
     TOYOTA_ADJUSTED_AMBIENT_T: 4.4
   response: 7CC03613D6E
 - expected_values:
