Update Toyota Tundra generations: Added Wikipedia reference and updated README
- Added references array with Toyota Tundra Wikipedia article
- Updated README.md with standard template for vehicle documentation

--- a/generations.yaml
+++ b/generations.yaml
@@ -1,3 +1,6 @@
+references:
+  - "https://en.wikipedia.org/wiki/Toyota_Tundra"
+
 generations:
   - name: "First Generation (XK30/XK40)"
     start_year: 1999
