Update command data for Toyota/Tundra

--- a/tests/test_cases/2025/commands/700.708.2210A2.yaml
+++ b/tests/test_cases/2025/commands/700.708.2210A2.yaml
@@ -85,6 +85,20 @@ test_cases:
     70810086210A28E878D
     708219F9E0000000000
 - expected_values:
+    TOYOTA_AFRL_HIGH_1: 12.10353
+    TOYOTA_AFRL_IDLE_1: 6.24471
+    TOYOTA_AFRL_LOW_1: 0
+    TOYOTA_AFRL_MID_1_1: 5.85412
+    TOYOTA_AFRL_MID_2_1: 7.80706
+    TOYOTA_AF_LEARN_HIGH_PORT_B1: 12.35294
+    TOYOTA_AF_LEARN_IDLE_PORT_B1: 6.47059
+    TOYOTA_AF_LEARN_LOW_PORT_B1: -2.94118
+    TOYOTA_AF_LEARN_MID1_PORT_B1: 6.07843
+    TOYOTA_AF_LEARN_MID2_PORT_B1: 8.03922
+  response: |-
+    70810086210A290788F
+    70821949F0000000000
+- expected_values:
     TOYOTA_AFRL_HIGH_1: 9.36941
     TOYOTA_AFRL_IDLE_1: 6.24471
     TOYOTA_AFRL_LOW_1: 5.85412
