--- a/tests/test_cases/2018/commands/750.758.2116|e=2A,fc=1.yaml
+++ b/tests/test_cases/2018/commands/750.758.2116|e=2A,fc=1.yaml
@@ -8,12 +8,16 @@ test_cases:
     TOYOTA_TT_5: 150
     TOYOTA_TT_FL: 10
     TOYOTA_TT_FL_V1: 10
+    TOYOTA_TT_FL_V2: 10
     TOYOTA_TT_FR: 11
     TOYOTA_TT_FR_V1: 11
+    TOYOTA_TT_FR_V2: 11
     TOYOTA_TT_RL: 11
     TOYOTA_TT_RL_V1: 11
+    TOYOTA_TT_RL_V2: 11
     TOYOTA_TT_RR: 11
     TOYOTA_TT_RR_V1: 11
+    TOYOTA_TT_RR_V2: 11
     TOYOTA_TT_SPARE: 215
     TOYOTA_TT_SPARE_V1: 150
   response: |-
@@ -28,12 +32,16 @@ test_cases:
     TOYOTA_TT_5: 150
     TOYOTA_TT_FL: 15
     TOYOTA_TT_FL_V1: 15
+    TOYOTA_TT_FL_V2: 15
     TOYOTA_TT_FR: 16
     TOYOTA_TT_FR_V1: 16
+    TOYOTA_TT_FR_V2: 16
     TOYOTA_TT_RL: 16
     TOYOTA_TT_RL_V1: 16
+    TOYOTA_TT_RL_V2: 16
     TOYOTA_TT_RR: 16
     TOYOTA_TT_RR_V1: 16
+    TOYOTA_TT_RR_V2: 16
     TOYOTA_TT_SPARE: 215
     TOYOTA_TT_SPARE_V1: 150
   response: |-
@@ -47,12 +55,16 @@ test_cases:
     TOYOTA_TT_5: 150
     TOYOTA_TT_FL: 16
     TOYOTA_TT_FL_V1: 16
+    TOYOTA_TT_FL_V2: 16
     TOYOTA_TT_FR: 16
     TOYOTA_TT_FR_V1: 16
+    TOYOTA_TT_FR_V2: 16
     TOYOTA_TT_RL: 17
     TOYOTA_TT_RL_V1: 17
+    TOYOTA_TT_RL_V2: 17
     TOYOTA_TT_RR: 17
     TOYOTA_TT_RR_V1: 17
+    TOYOTA_TT_RR_V2: 17
     TOYOTA_TT_SPARE: 215
     TOYOTA_TT_SPARE_V1: 150
   response: |-
@@ -67,12 +79,16 @@ test_cases:
     TOYOTA_TT_5: 150
     TOYOTA_TT_FL: 22
     TOYOTA_TT_FL_V1: 22
+    TOYOTA_TT_FL_V2: 22
     TOYOTA_TT_FR: 24
     TOYOTA_TT_FR_V1: 24
+    TOYOTA_TT_FR_V2: 24
     TOYOTA_TT_RL: 21
     TOYOTA_TT_RL_V1: 21
+    TOYOTA_TT_RL_V2: 21
     TOYOTA_TT_RR: 22
     TOYOTA_TT_RR_V1: 22
+    TOYOTA_TT_RR_V2: 22
     TOYOTA_TT_SPARE: 215
     TOYOTA_TT_SPARE_V1: 150
   response: |-
@@ -86,12 +102,16 @@ test_cases:
     TOYOTA_TT_5: 150
     TOYOTA_TT_FL: 22
     TOYOTA_TT_FL_V1: 22
+    TOYOTA_TT_FL_V2: 22
     TOYOTA_TT_FR: 31
     TOYOTA_TT_FR_V1: 31
+    TOYOTA_TT_FR_V2: 31
     TOYOTA_TT_RL: 23
     TOYOTA_TT_RL_V1: 23
+    TOYOTA_TT_RL_V2: 23
     TOYOTA_TT_RR: 21
     TOYOTA_TT_RR_V1: 21
+    TOYOTA_TT_RR_V2: 21
     TOYOTA_TT_SPARE: 215
     TOYOTA_TT_SPARE_V1: 150
   response: |-
@@ -105,12 +125,16 @@ test_cases:
     TOYOTA_TT_5: 150
     TOYOTA_TT_FL: 25
     TOYOTA_TT_FL_V1: 25
+    TOYOTA_TT_FL_V2: 25
     TOYOTA_TT_FR: 24
     TOYOTA_TT_FR_V1: 24
+    TOYOTA_TT_FR_V2: 24
     TOYOTA_TT_RL: 27
     TOYOTA_TT_RL_V1: 27
+    TOYOTA_TT_RL_V2: 27
     TOYOTA_TT_RR: 26
     TOYOTA_TT_RR_V1: 26
+    TOYOTA_TT_RR_V2: 26
     TOYOTA_TT_SPARE: 215
     TOYOTA_TT_SPARE_V1: 150
   response: |-
@@ -124,12 +148,16 @@ test_cases:
     TOYOTA_TT_5: 150
     TOYOTA_TT_FL: 50
     TOYOTA_TT_FL_V1: 50
+    TOYOTA_TT_FL_V2: 50
     TOYOTA_TT_FR: 49
     TOYOTA_TT_FR_V1: 49
+    TOYOTA_TT_FR_V2: 49
     TOYOTA_TT_RL: 54
     TOYOTA_TT_RL_V1: 54
+    TOYOTA_TT_RL_V2: 54
     TOYOTA_TT_RR: 54
     TOYOTA_TT_RR_V1: 54
+    TOYOTA_TT_RR_V2: 54
     TOYOTA_TT_SPARE: 215
     TOYOTA_TT_SPARE_V1: 150
   response: |-
@@ -144,12 +172,16 @@ test_cases:
     TOYOTA_TT_5: 150
     TOYOTA_TT_FL: 51
     TOYOTA_TT_FL_V1: 51
+    TOYOTA_TT_FL_V2: 51
     TOYOTA_TT_FR: 37
     TOYOTA_TT_FR_V1: 37
+    TOYOTA_TT_FR_V2: 37
     TOYOTA_TT_RL: 49
     TOYOTA_TT_RL_V1: 49
+    TOYOTA_TT_RL_V2: 49
     TOYOTA_TT_RR: 36
     TOYOTA_TT_RR_V1: 36
+    TOYOTA_TT_RR_V2: 36
     TOYOTA_TT_SPARE: 215
     TOYOTA_TT_SPARE_V1: 150
   response: |-
