--- a/tests/test_cases/2019/commands/750.758.2116|e=2A,fc=1.yaml
+++ b/tests/test_cases/2019/commands/750.758.2116|e=2A,fc=1.yaml
@@ -8,12 +8,16 @@ test_cases:
     TOYOTA_TT_5: 150
     TOYOTA_TT_FL: 11
     TOYOTA_TT_FL_V1: 11
+    TOYOTA_TT_FL_V2: 11
     TOYOTA_TT_FR: 12
     TOYOTA_TT_FR_V1: 12
+    TOYOTA_TT_FR_V2: 12
     TOYOTA_TT_RL: 12
     TOYOTA_TT_RL_V1: 12
+    TOYOTA_TT_RL_V2: 12
     TOYOTA_TT_RR: 11
     TOYOTA_TT_RR_V1: 11
+    TOYOTA_TT_RR_V2: 11
     TOYOTA_TT_SPARE: 215
     TOYOTA_TT_SPARE_V1: 150
   response: |-
@@ -27,12 +31,16 @@ test_cases:
     TOYOTA_TT_5: 150
     TOYOTA_TT_FL: 11
     TOYOTA_TT_FL_V1: 11
+    TOYOTA_TT_FL_V2: 11
     TOYOTA_TT_FR: 215
     TOYOTA_TT_FR_V1: 150
+    TOYOTA_TT_FR_V2: 150
     TOYOTA_TT_RL: 14
     TOYOTA_TT_RL_V1: 14
+    TOYOTA_TT_RL_V2: 14
     TOYOTA_TT_RR: 14
     TOYOTA_TT_RR_V1: 14
+    TOYOTA_TT_RR_V2: 14
     TOYOTA_TT_SPARE: 215
     TOYOTA_TT_SPARE_V1: 150
   response: |-
@@ -46,12 +54,16 @@ test_cases:
     TOYOTA_TT_5: 150
     TOYOTA_TT_FL: 12
     TOYOTA_TT_FL_V1: 12
+    TOYOTA_TT_FL_V2: 12
     TOYOTA_TT_FR: 13
     TOYOTA_TT_FR_V1: 13
+    TOYOTA_TT_FR_V2: 13
     TOYOTA_TT_RL: 14
     TOYOTA_TT_RL_V1: 14
+    TOYOTA_TT_RL_V2: 14
     TOYOTA_TT_RR: 215
     TOYOTA_TT_RR_V1: 150
+    TOYOTA_TT_RR_V2: 150
     TOYOTA_TT_SPARE: 215
     TOYOTA_TT_SPARE_V1: 150
   response: |-
@@ -65,12 +77,16 @@ test_cases:
     TOYOTA_TT_5: 150
     TOYOTA_TT_FL: 16
     TOYOTA_TT_FL_V1: 16
+    TOYOTA_TT_FL_V2: 16
     TOYOTA_TT_FR: 18
     TOYOTA_TT_FR_V1: 18
+    TOYOTA_TT_FR_V2: 18
     TOYOTA_TT_RL: 215
     TOYOTA_TT_RL_V1: 150
+    TOYOTA_TT_RL_V2: 150
     TOYOTA_TT_RR: 17
     TOYOTA_TT_RR_V1: 17
+    TOYOTA_TT_RR_V2: 17
     TOYOTA_TT_SPARE: 215
     TOYOTA_TT_SPARE_V1: 150
   response: |-
@@ -84,12 +100,16 @@ test_cases:
     TOYOTA_TT_5: 150
     TOYOTA_TT_FL: 23
     TOYOTA_TT_FL_V1: 23
+    TOYOTA_TT_FL_V2: 23
     TOYOTA_TT_FR: 21
     TOYOTA_TT_FR_V1: 21
+    TOYOTA_TT_FR_V2: 21
     TOYOTA_TT_RL: 21
     TOYOTA_TT_RL_V1: 21
+    TOYOTA_TT_RL_V2: 21
     TOYOTA_TT_RR: 24
     TOYOTA_TT_RR_V1: 24
+    TOYOTA_TT_RR_V2: 24
     TOYOTA_TT_SPARE: 215
     TOYOTA_TT_SPARE_V1: 150
   response: |-
@@ -103,12 +123,16 @@ test_cases:
     TOYOTA_TT_5: 150
     TOYOTA_TT_FL: 215
     TOYOTA_TT_FL_V1: 150
+    TOYOTA_TT_FL_V2: 150
     TOYOTA_TT_FR: 12
     TOYOTA_TT_FR_V1: 12
+    TOYOTA_TT_FR_V2: 12
     TOYOTA_TT_RL: 12
     TOYOTA_TT_RL_V1: 12
+    TOYOTA_TT_RL_V2: 12
     TOYOTA_TT_RR: 11
     TOYOTA_TT_RR_V1: 11
+    TOYOTA_TT_RR_V2: 11
     TOYOTA_TT_SPARE: 215
     TOYOTA_TT_SPARE_V1: 150
   response: |-
