--- a/tests/test_cases/2022/commands/750.758.221004|e=2A,ta=2A,fc=1.yaml
+++ b/tests/test_cases/2022/commands/750.758.221004|e=2A,ta=2A,fc=1.yaml
@@ -14,6 +14,7 @@ test_cases:
     TOYOTA_TT_FL_V2: -40
     TOYOTA_TT_FR_V2: -40
     TOYOTA_TT_RL_V2: 42
+    TOYOTA_TT_RL_V2_V2: 42
     TOYOTA_TT_RR_V2: -40
     TOYOTA_TT_SPARE_V2: -40
   response: |-
@@ -25,9 +26,13 @@ test_cases:
     TOYOTA_TT_3_V2: 27
     TOYOTA_TT_4_V2: 29
     TOYOTA_TT_FL_V2: 25
+    TOYOTA_TT_FL_V2_V2: 25
     TOYOTA_TT_FR_V2: 27
+    TOYOTA_TT_FR_V2_V2: 27
     TOYOTA_TT_RL_V2: 27
+    TOYOTA_TT_RL_V2_V2: 27
     TOYOTA_TT_RR_V2: 29
+    TOYOTA_TT_RR_V2_V2: 29
     TOYOTA_TT_SPARE_V2: -40
   response: |-
     7582A10086210044143
@@ -38,9 +43,13 @@ test_cases:
     TOYOTA_TT_3_V2: 37
     TOYOTA_TT_4_V2: 38
     TOYOTA_TT_FL_V2: 35
+    TOYOTA_TT_FL_V2_V2: 35
     TOYOTA_TT_FR_V2: 35
+    TOYOTA_TT_FR_V2_V2: 35
     TOYOTA_TT_RL_V2: 37
+    TOYOTA_TT_RL_V2_V2: 37
     TOYOTA_TT_RR_V2: 38
+    TOYOTA_TT_RR_V2_V2: 38
     TOYOTA_TT_SPARE_V2: -40
   response: |-
     7582A10086210044B4B
@@ -51,9 +60,13 @@ test_cases:
     TOYOTA_TT_3_V2: 38
     TOYOTA_TT_4_V2: 41
     TOYOTA_TT_FL_V2: 36
+    TOYOTA_TT_FL_V2_V2: 36
     TOYOTA_TT_FR_V2: 38
+    TOYOTA_TT_FR_V2_V2: 38
     TOYOTA_TT_RL_V2: 38
+    TOYOTA_TT_RL_V2_V2: 38
     TOYOTA_TT_RR_V2: 41
+    TOYOTA_TT_RR_V2_V2: 41
     TOYOTA_TT_SPARE_V2: -40
   response: |-
     7582A10086210044C4E
@@ -64,9 +77,13 @@ test_cases:
     TOYOTA_TT_3_V2: 37
     TOYOTA_TT_4_V2: 37
     TOYOTA_TT_FL_V2: 38
+    TOYOTA_TT_FL_V2_V2: 38
     TOYOTA_TT_FR_V2: 35
+    TOYOTA_TT_FR_V2_V2: 35
     TOYOTA_TT_RL_V2: 37
+    TOYOTA_TT_RL_V2_V2: 37
     TOYOTA_TT_RR_V2: 37
+    TOYOTA_TT_RR_V2_V2: 37
     TOYOTA_TT_SPARE_V2: -40
   response: |-
     7582A10086210044E4B
@@ -77,9 +94,13 @@ test_cases:
     TOYOTA_TT_3_V2: 49
     TOYOTA_TT_4_V2: 48
     TOYOTA_TT_FL_V2: 46
+    TOYOTA_TT_FL_V2_V2: 46
     TOYOTA_TT_FR_V2: 43
+    TOYOTA_TT_FR_V2_V2: 43
     TOYOTA_TT_RL_V2: 49
+    TOYOTA_TT_RL_V2_V2: 49
     TOYOTA_TT_RR_V2: 48
+    TOYOTA_TT_RR_V2_V2: 48
     TOYOTA_TT_SPARE_V2: -40
   response: |-
     7582A10086210045653
@@ -90,9 +111,13 @@ test_cases:
     TOYOTA_TT_3_V2: 49
     TOYOTA_TT_4_V2: 48
     TOYOTA_TT_FL_V2: 46
+    TOYOTA_TT_FL_V2_V2: 46
     TOYOTA_TT_FR_V2: 44
+    TOYOTA_TT_FR_V2_V2: 44
     TOYOTA_TT_RL_V2: 49
+    TOYOTA_TT_RL_V2_V2: 49
     TOYOTA_TT_RR_V2: 48
+    TOYOTA_TT_RR_V2_V2: 48
     TOYOTA_TT_SPARE_V2: -40
   response: |-
     7582A10086210045654
