--- a/tests/test_cases/2023/commands/700.708.221F5C.yaml
+++ b/tests/test_cases/2023/commands/700.708.221F5C.yaml
@@ -1,10 +1,8 @@
 command_id: 700.708.221F5C
 test_cases:
 - expected_values:
-    TOYOTA_EOT_V2_V2: 39
-    TOYOTA_EOT_V3_V2: 39
+    TOYOTA_EOT_V2: 39
   response: 70804621F5C4F
 - expected_values:
-    TOYOTA_EOT_V2_V2: 93
-    TOYOTA_EOT_V3_V2: 93
+    TOYOTA_EOT_V2: 93
   response: 70804621F5C85
