--- a/tests/test_cases/2016/command_support.yaml
+++ b/tests/test_cases/2016/command_support.yaml
@@ -84,7 +84,7 @@ unsupported_commands_by_ecu:
   - 700.708.221638:TOYOTA_ATF_TEMP
   "701":
   - 701.709.220103:TOYOTA_ODO_V5
-  - 701.709.221627:TOYOTA_ATF_T_PAN,TOYOTA_TF1_PAN,TOYOTA_TFP_T
+  - 701.709.221627:TOYOTA_ATF_T_PAN,TOYOTA_TF1_PAN
   - 701.709.221628:TOYOTA_TF2_CONV
   "745":
   - 745.221739|fc=1:TOYOTA_HVBAT_SOC_DISPLAY
@@ -96,8 +96,8 @@ unsupported_commands_by_ecu:
   - '750.2116'
   - '750.2130'
   - 750.2130|e=2A,fc=1:TOYOTA_TP_FL_V3,TOYOTA_TP_FR_V3,TOYOTA_TP_RL_V3,TOYOTA_TP_RR_V3,TOYOTA_TP_SPARE_V3
-  - 750.758.2116|e=2A,fc=1:TOYOTA_TT_1,TOYOTA_TT_2,TOYOTA_TT_3,TOYOTA_TT_4,TOYOTA_TT_5,TOYOTA_TT_FL,TOYOTA_TT_FL_V1,TOYOTA_TT_FR,TOYOTA_TT_FR_V1,TOYOTA_TT_RL,TOYOTA_TT_RL_V1,TOYOTA_TT_RR,TOYOTA_TT_RR_V1,TOYOTA_TT_SPARE,TOYOTA_TT_SPARE_V1
-  - 750.758.221004|e=2A,ta=2A,fc=1:TOYOTA_TT_1_V2,TOYOTA_TT_2_V2,TOYOTA_TT_3_V2,TOYOTA_TT_4_V2,TOYOTA_TT_5_V2,TOYOTA_TT_FL_V2,TOYOTA_TT_FL_V2,TOYOTA_TT_FR_V2,TOYOTA_TT_FR_V2,TOYOTA_TT_RL_V2,TOYOTA_TT_RL_V2,TOYOTA_TT_RR_V2,TOYOTA_TT_RR_V2,TOYOTA_TT_SPARE_V2,TOYOTA_TT_SPARE_V2
+  - 750.758.2116|e=2A,fc=1:TOYOTA_TT_1,TOYOTA_TT_2,TOYOTA_TT_3,TOYOTA_TT_4,TOYOTA_TT_5,TOYOTA_TT_FL,TOYOTA_TT_FL_V1,TOYOTA_TT_FL_V2,TOYOTA_TT_FR,TOYOTA_TT_FR_V1,TOYOTA_TT_FR_V2,TOYOTA_TT_RL,TOYOTA_TT_RL_V1,TOYOTA_TT_RL_V2,TOYOTA_TT_RR,TOYOTA_TT_RR_V1,TOYOTA_TT_RR_V2,TOYOTA_TT_SPARE,TOYOTA_TT_SPARE_V1
+  - 750.758.221004|e=2A,ta=2A,fc=1:TOYOTA_TT_1_V2,TOYOTA_TT_2_V2,TOYOTA_TT_3_V2,TOYOTA_TT_4_V2,TOYOTA_TT_5_V2,TOYOTA_TT_FL_V2,TOYOTA_TT_FL_V2_V2,TOYOTA_TT_FR_V2,TOYOTA_TT_FR_V2_V2,TOYOTA_TT_RL_V2,TOYOTA_TT_RL_V2_V2,TOYOTA_TT_RR_V2,TOYOTA_TT_RR_V2_V2,TOYOTA_TT_SPARE_V2,TOYOTA_TT_SPARE_V2
   - 750.758.221005|e=2A,ta=2A,fc=1:TOYOTA_TP_1,TOYOTA_TP_2,TOYOTA_TP_3,TOYOTA_TP_4,TOYOTA_TP_5,TOYOTA_TP_FL_V2,TOYOTA_TP_FL_V2,TOYOTA_TP_FR_V2,TOYOTA_TP_FR_V2,TOYOTA_TP_RL_V2,TOYOTA_TP_RL_V2,TOYOTA_TP_RR_V2,TOYOTA_TP_RR_V2,TOYOTA_TP_SPARE_V2,TOYOTA_TP_SPARE_V2
   - 750.758.222021|e=2A,ta=2A,fc=1:TOYOTA_TID_1,TOYOTA_TID_2,TOYOTA_TID_3,TOYOTA_TID_4
   "7B0":
