--- a/tests/test_cases/2023/commands/750.758.221004|e=2A,ta=2A,fc=1.yaml
+++ b/tests/test_cases/2023/commands/750.758.221004|e=2A,ta=2A,fc=1.yaml
@@ -7,8 +7,11 @@ test_cases:
     TOYOTA_TT_5_V2: 33
     TOYOTA_TT_FL_V2: -40
     TOYOTA_TT_FR_V2: 34
+    TOYOTA_TT_FR_V2_V2: 34
     TOYOTA_TT_RL_V2: 33
+    TOYOTA_TT_RL_V2_V2: 33
     TOYOTA_TT_RR_V2: 34
+    TOYOTA_TT_RR_V2_V2: 34
     TOYOTA_TT_SPARE_V2: 33
   response: |-
     221004
@@ -28,6 +31,7 @@ test_cases:
     TOYOTA_TT_FL_V2: -40
     TOYOTA_TT_FR_V2: -40
     TOYOTA_TT_RL_V2: 33
+    TOYOTA_TT_RL_V2_V2: 33
     TOYOTA_TT_RR_V2: -40
     TOYOTA_TT_SPARE_V2: -40
   response: |-
@@ -40,9 +44,13 @@ test_cases:
     TOYOTA_TT_4_V2: 19
     TOYOTA_TT_5_V2: 18
     TOYOTA_TT_FL_V2: 23
+    TOYOTA_TT_FL_V2_V2: 23
     TOYOTA_TT_FR_V2: 19
+    TOYOTA_TT_FR_V2_V2: 19
     TOYOTA_TT_RL_V2: 23
+    TOYOTA_TT_RL_V2_V2: 23
     TOYOTA_TT_RR_V2: 19
+    TOYOTA_TT_RR_V2_V2: 19
     TOYOTA_TT_SPARE_V2: 18
   response: |-
     7582A10086210043F3B
@@ -54,9 +62,13 @@ test_cases:
     TOYOTA_TT_4_V2: 34
     TOYOTA_TT_5_V2: 34
     TOYOTA_TT_FL_V2: 33
+    TOYOTA_TT_FL_V2_V2: 33
     TOYOTA_TT_FR_V2: 34
+    TOYOTA_TT_FR_V2_V2: 34
     TOYOTA_TT_RL_V2: 33
+    TOYOTA_TT_RL_V2_V2: 33
     TOYOTA_TT_RR_V2: 34
+    TOYOTA_TT_RR_V2_V2: 34
     TOYOTA_TT_SPARE_V2: 34
   response: |-
     7582A1008621004494A
