--- a/tests/test_cases/2024/commands/750.758.221004|e=2A,ta=2A,fc=1.yaml
+++ b/tests/test_cases/2024/commands/750.758.221004|e=2A,ta=2A,fc=1.yaml
@@ -14,6 +14,7 @@ test_cases:
     TOYOTA_TT_FL_V2: -40
     TOYOTA_TT_FR_V2: -40
     TOYOTA_TT_RL_V2: 40
+    TOYOTA_TT_RL_V2_V2: 40
     TOYOTA_TT_RR_V2: -40
     TOYOTA_TT_SPARE_V2: -40
   response: |-
@@ -24,8 +25,10 @@ test_cases:
     TOYOTA_TT_4_V2: 23
     TOYOTA_TT_FL_V2: -40
     TOYOTA_TT_FR_V2: 23
+    TOYOTA_TT_FR_V2_V2: 23
     TOYOTA_TT_RL_V2: -40
     TOYOTA_TT_RR_V2: 23
+    TOYOTA_TT_RR_V2_V2: 23
     TOYOTA_TT_SPARE_V2: -40
   response: |-
     7582A1008621004003F
@@ -36,9 +39,13 @@ test_cases:
     TOYOTA_TT_3_V2: 39
     TOYOTA_TT_4_V2: 42
     TOYOTA_TT_FL_V2: 34
+    TOYOTA_TT_FL_V2_V2: 34
     TOYOTA_TT_FR_V2: 35
+    TOYOTA_TT_FR_V2_V2: 35
     TOYOTA_TT_RL_V2: 39
+    TOYOTA_TT_RL_V2_V2: 39
     TOYOTA_TT_RR_V2: 42
+    TOYOTA_TT_RR_V2_V2: 42
     TOYOTA_TT_SPARE_V2: -40
   response: |-
     7582A10086210044A4B
@@ -49,9 +56,13 @@ test_cases:
     TOYOTA_TT_3_V2: 42
     TOYOTA_TT_4_V2: 45
     TOYOTA_TT_FL_V2: 44
+    TOYOTA_TT_FL_V2_V2: 44
     TOYOTA_TT_FR_V2: 55
+    TOYOTA_TT_FR_V2_V2: 55
     TOYOTA_TT_RL_V2: 42
+    TOYOTA_TT_RL_V2_V2: 42
     TOYOTA_TT_RR_V2: 45
+    TOYOTA_TT_RR_V2_V2: 45
     TOYOTA_TT_SPARE_V2: -40
   response: |-
     7582A1008621004545F
@@ -62,9 +73,13 @@ test_cases:
     TOYOTA_TT_3_V2: 50
     TOYOTA_TT_4_V2: 51
     TOYOTA_TT_FL_V2: 54
+    TOYOTA_TT_FL_V2_V2: 54
     TOYOTA_TT_FR_V2: 52
+    TOYOTA_TT_FR_V2_V2: 52
     TOYOTA_TT_RL_V2: 50
+    TOYOTA_TT_RL_V2_V2: 50
     TOYOTA_TT_RR_V2: 51
+    TOYOTA_TT_RR_V2_V2: 51
     TOYOTA_TT_SPARE_V2: -40
   response: |-
     7582A10086210045E5C
