--- a/tests/test_cases/2025/commands/750.758.221004|e=2A,ta=2A,fc=1.yaml
+++ b/tests/test_cases/2025/commands/750.758.221004|e=2A,ta=2A,fc=1.yaml
@@ -14,8 +14,10 @@ test_cases:
     TOYOTA_TT_4_V2: 23
     TOYOTA_TT_FL_V2: -40
     TOYOTA_TT_FR_V2: 23
+    TOYOTA_TT_FR_V2_V2: 23
     TOYOTA_TT_RL_V2: -40
     TOYOTA_TT_RR_V2: 23
+    TOYOTA_TT_RR_V2_V2: 23
     TOYOTA_TT_SPARE_V2: -40
   response: |-
     7582A1008621004003F
@@ -26,8 +28,11 @@ test_cases:
     TOYOTA_TT_4_V2: 45
     TOYOTA_TT_FL_V2: -40
     TOYOTA_TT_FR_V2: 45
+    TOYOTA_TT_FR_V2_V2: 45
     TOYOTA_TT_RL_V2: 47
+    TOYOTA_TT_RL_V2_V2: 47
     TOYOTA_TT_RR_V2: 45
+    TOYOTA_TT_RR_V2_V2: 45
     TOYOTA_TT_SPARE_V2: -40
   response: |-
     7582A10086210040055
@@ -38,9 +43,13 @@ test_cases:
     TOYOTA_TT_3_V2: 39
     TOYOTA_TT_4_V2: 40
     TOYOTA_TT_FL_V2: 41
+    TOYOTA_TT_FL_V2_V2: 41
     TOYOTA_TT_FR_V2: 38
+    TOYOTA_TT_FR_V2_V2: 38
     TOYOTA_TT_RL_V2: 39
+    TOYOTA_TT_RL_V2_V2: 39
     TOYOTA_TT_RR_V2: 40
+    TOYOTA_TT_RR_V2_V2: 40
     TOYOTA_TT_SPARE_V2: -40
   response: |-
     7582A1008621004514E
@@ -51,9 +60,13 @@ test_cases:
     TOYOTA_TT_3_V2: 52
     TOYOTA_TT_4_V2: 54
     TOYOTA_TT_FL_V2: 56
+    TOYOTA_TT_FL_V2_V2: 56
     TOYOTA_TT_FR_V2: 56
+    TOYOTA_TT_FR_V2_V2: 56
     TOYOTA_TT_RL_V2: 52
+    TOYOTA_TT_RL_V2_V2: 52
     TOYOTA_TT_RR_V2: 54
+    TOYOTA_TT_RR_V2_V2: 54
     TOYOTA_TT_SPARE_V2: -40
   response: |-
     7582A10086210046060
@@ -64,9 +77,13 @@ test_cases:
     TOYOTA_TT_3_V2: 54
     TOYOTA_TT_4_V2: 54
     TOYOTA_TT_FL_V2: 56
+    TOYOTA_TT_FL_V2_V2: 56
     TOYOTA_TT_FR_V2: 57
+    TOYOTA_TT_FR_V2_V2: 57
     TOYOTA_TT_RL_V2: 54
+    TOYOTA_TT_RL_V2_V2: 54
     TOYOTA_TT_RR_V2: 54
+    TOYOTA_TT_RR_V2_V2: 54
     TOYOTA_TT_SPARE_V2: -40
   response: |-
     7582A10086210046061
