Update command data for Toyota/Tundra

--- a/tests/test_cases/2014/commands/7E0.7E8.2101.yaml
+++ b/tests/test_cases/2014/commands/7E0.7E8.2101.yaml
@@ -105,6 +105,32 @@ test_cases:
     7E823310601AF020836
     7E82465000000000000
 - expected_values:
+    TOYOTA_AAT: 39
+    TOYOTA_ACCEL_SENS_NO_1_VOLT: 19.60784
+    TOYOTA_ACCEL_SENS_NO_2_VOLT: 2.7451
+    TOYOTA_ATMOSPHERE_PRESSURE: 18
+    TOYOTA_CALCULATED_LOAD_7E0: 28.62745
+    TOYOTA_COOLANT_TEMP: 111
+    TOYOTA_ENGINE_RUN_TIME: 305
+    TOYOTA_ENGINE_SPEED: 0
+    TOYOTA_INTAKE_AIR: 58
+    TOYOTA_MAF: 655.35
+    TOYOTA_MAP: 41
+    TOYOTA_THROTTLE_MOTOR_DUTY: 0.39216
+    TOYOTA_THROTTLE_SENSOR_POSITION: 52.15686
+    TOYOTA_THROTTLE_SENSOR_VOLT: 16.07843
+    TOYOTA_THROTTL_SENSOR_2_VOLT: 32.15686
+    TOYOTA_TIME_AFTER_DTC_CLEARED: 13906
+    TOYOTA_VEHICLE_LOAD: 0.06714
+    TOYOTA_VEHICLE_SPEED: 246
+    TOYOTA_WARMUP_CYCLE_CLEARED_DTC: 2
+  response: |-
+    7E8101C610149002C04
+    7E8219329624F129700
+    7E82200F60131852952
+    7E823320701B2021736
+    7E82452000000000000
+- expected_values:
     TOYOTA_AAT: 37
     TOYOTA_ACCEL_SENS_NO_1_VOLT: 19.60784
     TOYOTA_ACCEL_SENS_NO_2_VOLT: 2.35294
