--- a/tests/test_cases/2014/commands/7E0.7E8.2103.yaml
+++ b/tests/test_cases/2014/commands/7E0.7E8.2103.yaml
@@ -28,6 +28,15 @@ test_cases:
     7E8217676B200003D03
     7E82281020200000000
 - expected_values:
+    TOYOTA_EVAP_PURGE_DUTY: 46.27451
+    TOYOTA_IGN_ADVANCE: 124
+    TOYOTA_LONG_FT_B1S1: -6.25
+    TOYOTA_SHORT_FT_B1S1: -2.34375
+  response: |-
+    7E81010610302027D78
+    7E8217C769D00003D03
+    7E82272020000000000
+- expected_values:
     TOYOTA_EVAP_PURGE_DUTY: 48.23529
     TOYOTA_IGN_ADVANCE: 123
     TOYOTA_LONG_FT_B1S1: -2.34375
