--- a/tests/test_cases/2014/commands/7E0.7E8.2151.yaml
+++ b/tests/test_cases/2014/commands/7E0.7E8.2151.yaml
@@ -1024,6 +1024,39 @@ test_cases:
     7E82480378000800000
     7E82500000000000000
 - expected_values:
+    TOYOTA_AC_AMB_T: -5
+    TOYOTA_AC_FB: 0
+    TOYOTA_ELEC_LOAD_FB: 0.06104
+    TOYOTA_ENG_SPD_START_OFF: 1276.5625
+    TOYOTA_ENG_START_HESIT: 0
+    TOYOTA_ENG_START_T: 0
+    TOYOTA_EOT: 11
+    TOYOTA_EOT_V3: 11
+    TOYOTA_IMMOB_FUEL_CUT: 0
+    TOYOTA_ISC_FB: -0.17334
+    TOYOTA_ISC_FLOW: 14.44702
+    TOYOTA_ISC_LEARN: 6.18652
+    TOYOTA_ISC_POS: 7.46155
+    TOYOTA_LOW_RPM_CTRL: 0
+    TOYOTA_LOW_RPM_START: 0
+    TOYOTA_NEUTRAL_CTRL: 0
+    TOYOTA_N_RANGE_STS: 1
+    TOYOTA_PREV_TRIP_AMB_T: -5
+    TOYOTA_PREV_TRIP_DST: 0
+    TOYOTA_PREV_TRIP_EOT: 11
+    TOYOTA_PREV_TRIP_IAT: 0
+    TOYOTA_STARTER_CNT: 1
+    TOYOTA_TPS: 0
+    TOYOTA_VVTOT: 33
+    TOYOTA_VVT_ADV_FAIL: 0
+  response: |-
+    7E81023615100000662
+    7E82101000049283333
+    7E822232300002E3B03
+    7E823D2001E7F7293CC
+    7E82480328000800080
+    7E82500000000000000
+- expected_values:
     TOYOTA_AC_AMB_T: 16
     TOYOTA_AC_FB: 0
     TOYOTA_ELEC_LOAD_FB: 0
