Update command data for Toyota/Tundra

--- a/tests/test_cases/2025/commands/700.708.22107B.yaml
+++ b/tests/test_cases/2025/commands/700.708.22107B.yaml
@@ -281,6 +281,14 @@ test_cases:
     7082380008007000054
     708241A2D2817170000
 - expected_values:
+    TOYOTA_EOT_V2: 1
+  response: |-
+    708102262107B004304
+    70821760100027F2189
+    708229C800A7F2B815F
+    708238000800E000041
+    70824292A2A282802A0
+- expected_values:
     TOYOTA_EOT_V2: 8
   response: |-
     708102262107B004804
