Update command data for Toyota/Tundra

--- a/tests/test_cases/2025/commands/700.708.22107B.yaml
+++ b/tests/test_cases/2025/commands/700.708.22107B.yaml
@@ -17,6 +17,14 @@ test_cases:
     708238000800900006E
     7082435464633330000
 - expected_values:
+    TOYOTA_EOT_V2: 3
+  response: |-
+    708102262107B000003
+    708215D0100BA7F2381
+    708226680147F328009
+    7082380008000000080
+    708242B555528280000
+- expected_values:
     TOYOTA_EOT_V2: 30
   response: |-
     708102262107B000003
