Update command data for Toyota/Tundra

--- a/tests/test_cases/2024/commands/700.708.221019.yaml
+++ b/tests/test_cases/2024/commands/700.708.221019.yaml
@@ -7,11 +7,11 @@ test_cases:
     TOYOTA_INJECTION: DIRECT
   response: 70807621019015A8B24
 - expected_values:
+    TOYOTA_INJECTION: DIRECT
+  response: 7080762101901FF8000
+- expected_values:
     TOYOTA_INJECTION: BOTH
   response: '7080762101902008000'
 - expected_values:
     TOYOTA_INJECTION: BOTH
   response: 7080762101902BB8AFF
-- expected_values:
-    TOYOTA_INJECTION: BOTH
-  response: 7080762101902FF8000
