--- a/tests/test_cases/2023/commands/700.708.22107B.yaml
+++ b/tests/test_cases/2023/commands/700.708.22107B.yaml
@@ -9,6 +9,14 @@ test_cases:
     7082380008000000082
     708245E5082494B0000
 - expected_values:
+    TOYOTA_EOT_V2: 23
+  response: |-
+    708102262107B000000
+    70821000005D480AB85
+    708226C800080AB8000
+    7082380008000000087
+    708243F3E5A383D0000
+- expected_values:
     TOYOTA_EOT_V2: 33
   response: |-
     708102262107B000004
