--- a/tests/test_cases/2023/commands/700.708.221089.yaml
+++ b/tests/test_cases/2023/commands/700.708.221089.yaml
@@ -1,6 +1,10 @@
 command_id: 700.708.221089
 test_cases:
 - expected_values:
+    TOYOTA_EXHAUST_VVT_HOLD_LEARN_B1: 62.02767
+    TOYOTA_EXHAUST_VVT_HOLD_LEARN_VALUE_1: 62.02767
+  response: 7080562108927B5
+- expected_values:
     TOYOTA_EXHAUST_VVT_HOLD_LEARN_B1: 62.08869
     TOYOTA_EXHAUST_VVT_HOLD_LEARN_VALUE_1: 62.08869
   response: 7080562108927BF
