--- a/tests/test_cases/2023/commands/700.708.221627.yaml
+++ b/tests/test_cases/2023/commands/700.708.221627.yaml
@@ -1,6 +1,12 @@
 command_id: 700.708.221627
 test_cases:
 - expected_values:
+    TOYOTA_ATF_T_PAN_V3: 22.5
+  response: '708056216273E80'
+- expected_values:
+    TOYOTA_ATF_T_PAN_V3: 25
+  response: '708056216274100'
+- expected_values:
     TOYOTA_ATF_T_PAN_V3: 35
   response: 708056216274B00
 - expected_values:
