--- a/tests/test_cases/2023/commands/700.708.221002.yaml
+++ b/tests/test_cases/2023/commands/700.708.221002.yaml
@@ -1,8 +1,8 @@
 command_id: 700.708.221002
 test_cases:
 - expected_values:
-    TOYOTA_12V_V: 12.55856
-  response: '708056210022830'
+    TOYOTA_12V_V: 12.08981
+  response: 7080562100226B0
 - expected_values:
     TOYOTA_12V_V: 14.06735
   response: 708056210022D04
