--- a/tests/test_cases/2023/commands/700.708.22102A.yaml
+++ b/tests/test_cases/2023/commands/700.708.22102A.yaml
@@ -10,6 +10,15 @@ test_cases:
     708100862102A808078
     7082180810000000000
 - expected_values:
+    TOYOTA_A_F_RATIO_LEARNED_HIGH_BANK_1: -0.98039
+    TOYOTA_A_F_RATIO_LEARNED_IDLE_BANK_1: 0.58824
+    TOYOTA_A_F_RATIO_LEARNED_LOW_BANK_1: 0.58824
+    TOYOTA_A_F_RATIO_LEARNED_MID_1_BANK_1: -3.33333
+    TOYOTA_A_F_RATIO_LEARNED_MID_2_BANK_1: 0.58824
+  response: |-
+    708100862102A818177
+    70821817D0000000000
+- expected_values:
     TOYOTA_A_F_RATIO_LEARNED_HIGH_BANK_1: -0.58824
     TOYOTA_A_F_RATIO_LEARNED_IDLE_BANK_1: 0.58824
     TOYOTA_A_F_RATIO_LEARNED_LOW_BANK_1: 0.58824
