--- a/tests/test_cases/2023/commands/700.708.22106C.yaml
+++ b/tests/test_cases/2023/commands/700.708.22106C.yaml
@@ -4,6 +4,9 @@ test_cases:
     TOYOTA_DIST_SINCE_BAT_DISC: 229
   response: 7080562106C00E5
 - expected_values:
+    TOYOTA_DIST_SINCE_BAT_DISC: 1256
+  response: 7080562106C04E8
+- expected_values:
     TOYOTA_DIST_SINCE_BAT_DISC: 8049
   response: 7080562106C1F71
 - expected_values:
