--- a/tests/test_cases/2023/commands/700.708.2210A2.yaml
+++ b/tests/test_cases/2023/commands/700.708.2210A2.yaml
@@ -2,6 +2,20 @@ command_id: 700.708.2210A2
 test_cases:
 - expected_values:
     TOYOTA_AFRL_HIGH_1: 5.85412
+    TOYOTA_AFRL_IDLE_1: 0
+    TOYOTA_AFRL_LOW_1: 0
+    TOYOTA_AFRL_MID_1_1: 7.41647
+    TOYOTA_AFRL_MID_2_1: 8.19765
+    TOYOTA_AF_LEARN_HIGH_PORT_B1: 6.07843
+    TOYOTA_AF_LEARN_IDLE_PORT_B1: 0.19608
+    TOYOTA_AF_LEARN_LOW_PORT_B1: -3.72549
+    TOYOTA_AF_LEARN_MID1_PORT_B1: 7.64706
+    TOYOTA_AF_LEARN_MID2_PORT_B1: 8.43137
+  response: |-
+    70810086210A2807693
+    70821958F0000000000
+- expected_values:
+    TOYOTA_AFRL_HIGH_1: 5.85412
     TOYOTA_AFRL_IDLE_1: 5.46353
     TOYOTA_AFRL_LOW_1: 5.46353
     TOYOTA_AFRL_MID_1_1: 7.80706
