--- a/tests/test_cases/2023/commands/7B0.7B8.221006.yaml
+++ b/tests/test_cases/2023/commands/7B0.7B8.221006.yaml
@@ -6,6 +6,9 @@ test_cases:
     221006
     7B8056210067700
 - expected_values:
+    TOYOTA_MASTER_CYL_TEMP: 22
+  response: 7B8056210066600
+- expected_values:
     TOYOTA_MASTER_CYL_TEMP: 31
   response: 7B8056210066F00
 - expected_values:
