--- a/tests/test_cases/2023/commands/7D2.7DA.220103|fc=1.yaml
+++ b/tests/test_cases/2023/commands/7D2.7DA.220103|fc=1.yaml
@@ -27,3 +27,6 @@ test_cases:
 - expected_values:
     TOYOTA_ODO_V2_V2: 57934
   response: 7DA076201030100E24E
+- expected_values:
+    TOYOTA_ODO_V2_V2: 61954
+  response: 7DA076201030100F202
