--- a/tests/test_cases/2023/commands/7D2.7DA.221F46.yaml
+++ b/tests/test_cases/2023/commands/7D2.7DA.221F46.yaml
@@ -4,6 +4,9 @@ test_cases:
     TOYOTA_AAT_V2: 16
   response: 7DA04621F4638
 - expected_values:
+    TOYOTA_AAT_V2: 17
+  response: 7DA04621F4639
+- expected_values:
     TOYOTA_AAT_V2: 24
   response: 7DA04621F4640
 - expected_values:
